src/test/ui/issues/issue-29857.stderr
error: compilation successful
  --> $DIR/issue-29857.rs:31:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

